--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -2,7 +2,8 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap:35px
+    gap:35px;
+
 }
 
 .hero img{
@@ -52,6 +53,7 @@
     border: 2px solid #FFF;
     cursor: pointer;
 }
+
 
 .hero-connect:hover{
   border: 2px solid white;
