--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -62,3 +62,34 @@
 .hero-resume:hover{
     border-color: #B415FF;
 }
+
+@media(max-width:786px){
+    .hero img{
+        margin-top: 30px;
+        width: 260px;
+    }
+    .hero h1{
+     margin-top:50px;
+     width: 90%;
+     font-size: 40px;
+    }
+    .hero p{
+        width: 60%;
+        line-height: 32px;
+        margin:10px 0px ;
+    }
+    .hero-action{
+        gap: 60px;
+        font-size: 18px;
+        font-weight: 500;
+        margin-bottom: 30px;
+    }
+    .hero-connect{
+        padding:20px 30px ;
+        border-radius: 40px;
+    }
+    .hero-resume{
+        padding:20px 50px;
+        border-radius: 40px;
+    }
+}
